Enlarge footer to avoid cropped letters at the bottom of the page

--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -13,6 +13,6 @@ html {
   margin: 0;
   padding: 0;
   /* Set the fixed height of the footer here */
-  height: 20px;
+  height: 23px;
   background-color: #f5f5f5;
 }
